# sonar_sensor_gazebo

./: CMakeLists.txt  README.md  package.xml
include/: rotatingSonarRosPlugin.h
models/rotatingSonar/: model.config  rotationgSonar.sdf
src/: publishingSonarScanComplete.cpp  rotatingSonarControlPlugin.cc  rotatingSonarPlugin.cc  rotatingSonarRosPlugin.cc  vel.cc
world/: sonarTest.world
